Fixed hero info box next tried to rewrite but got stuck looked at original again and made effective changes

--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 * {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 body {
     min-height: 100vh;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
-    flex-direction: column; /*makes all other divs stack on top of one another */
-    
+    flex-direction: column; /*makes all other divs stack on top of one another */    
 }
 a {
     text-decoration: none;
@@ -23,17 +24,16 @@ ul {
     color:white;
     background-color: #1f2937;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
+    align-items: center;
+
 
 }
 
 .headerleft {
     border: white 1px;
-    
     display: flex;
-    justify-content: center;
-    align-items: center;
-
+    margin: 128px;
 }
 
 .headerlogo {
@@ -49,6 +49,7 @@ ul {
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    margin: 128px;
 
 }
 
@@ -65,37 +66,35 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row;
-    /*box-sizing: border-box;*/
-    /*flex-wrap: wrap;*/
+    flex-direction: row;   
+    background-color:#1F2937;
     
-    background-color:#1F2937 ;
 
+}
+
+.heroleft,
+.heroright {
+    margin: 128px;
 }
 
 
 
 .information {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
     flex-direction: column;
-
+    justify-content:flex-end;
+    align-items: center;
+    margin: 128px;
 }
 
-.boxall {
+.infoheading {
     display: flex;
-    flex-direction: column;
-    gap: 32px;
-    justify-content: space-evenly;
-    
-
-
+    align-items: center;
+    justify-content: center;
 }
 
 .infoboxes {
     display: flex;
-    justify-content: space-evenly;
     
 }
 
@@ -106,10 +105,11 @@ ul {
     text-align: center;
     border: 4px solid #3882F6;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-    border-radius: 4px;
+    border-radius: 16px;
     padding: 16px;
     width: 160px;
     height: 160px;
+    
     
 
 }
@@ -138,6 +138,7 @@ ul {
     text-align: center;
     justify-content: center;
     text-wrap: wrap;
+    margin: 128px;
 }
 .quotepara {
     display: flex;
@@ -148,7 +149,10 @@ ul {
 }
 .source {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    align-self: flex-end;
+    
+    
 }
 .sourcep {
     display: flex;
@@ -179,6 +183,7 @@ ul {
     background-color: #1f2937;
     flex: 1;
     color: white;
+    height: 64px;
 
 }
 
@@ -199,3 +204,4 @@ ul {
     justify-content: center;
     align-items: center;
 }
+
